# alfred.webdomain

./: .gitignore
backend/: package-lock.json  package.json  tsconfig.tsbuildinfo
backend/src/: index.ts
backend/src/templates/: basePrompt.ts  mid.md  simple.md
fastapi-be/: main.py  pyproject.toml  pyrightconfig.json  test_notebook.ipynb
fastapi-be/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
fastapi-be/baml_src/: clients.baml  config.baml
fastapi-be/baml_src/ai-calls/: framework.baml  preprocess_user_prompt.baml  types.baml
fastapi-be/baml_src/ai-calls/nextjs/: build_nextjs_project.baml  critique_generated_next.baml  nextjs_generation_steps.baml
fastapi-be/baml_src/ai-calls/nodejs/: node_generation_steps.baml  node_route_generator.baml
fastapi-be/deepagent_nextjs/: deepagent.py  generator_subagent.py  tavily_client.py
fastapi-be/deepagent_nextjs/lib/: breakdown_for_web_search.py  search_agent.py  search_agent_prompt.py  search_queries.py  tavily_client.py
fastapi-be/e2b/: build_nodejs_template.py  build_template.py  sbx_ops.py
fastapi-be/model/: main.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: index.ts
frontend/components/chat/: ChatInput.tsx  ChatPanel.tsx  CodeTab.tsx  CodeViewer.tsx  FileNavigator.tsx  FilesTab.tsx  PreviewTab.tsx  TabSwitcher.tsx
frontend/types/: index.ts
frontend/utils/: dummyProject.ts  parseXml.ts
frontend/zustand/: index.ts
(+13 files in other folders)
